--- a/Lab02/css/Lab02.css
+++ b/Lab02/css/Lab02.css
@@ -2,9 +2,20 @@ body {
     margin: 0 auto;
     max-width: 50em;
     font-family: "Helvetica", "Arial", sans-serif;
+    color: #555;
 }
 
-h2 {
-    margin-top: 1em;
-    padding-top: 1em;
+h1, strong {
+    /* color: #333; */
+    margin: 1em;
+    background-color: #d6d3d6;
+    border-radius: 20px;
+    padding-inline: 1em;
+    text-align: center;
+}
+
+img {
+    width: 50%;
+    margin: 0 auto;
+    display: block;
 }
