--- a/Lab04/index.css
+++ b/Lab04/index.css
@@ -32,3 +32,11 @@ table, th, td {
     border-collapse: collapse;
     text-align: center;
 }
+
+pre, code {
+    background-color: #f5f5f5;
+    border-radius: 8px;
+    padding: 4px 8px;
+    display: inline-block;
+    white-space: pre-wrap;
+}
