Lab12: adding _nav.ejs to better lasagna and refactoring preguntaGuardada and preguntaError to preguntaResultado

--- a/views/contacto.ejs
+++ b/views/contacto.ejs
@@ -1,4 +1,5 @@
 <%- include('includes/_header', { title: 'Contacto' }) %>
+<%- include('includes/_nav') %>
 
 <section class="section">
     <h1 class="title is-1">¡Contactame!</h1>
@@ -6,4 +7,4 @@
     <p class="is-size-5">📞 Mi número: <a href="tel:+524425669698">+524425669698</a></p>
 </section class="section">
 
-<% include('includes/_footer.ejs') %>
+<%- include('includes/_footer.ejs') %>
