--- a/views/miGithub.ejs
+++ b/views/miGithub.ejs
@@ -1,4 +1,5 @@
-<% include('includes/_header') {title : {'GitHub'}} %>
+<%- include('includes/_header', {title : 'Mi GitHub'})%>
+<%- include('includes/_nav') %>
 
 <section class="">
     <h1 class="title is-1">Mi Github</h1>
@@ -10,4 +11,4 @@
     </p>
 </section>
 
-<% include('includes/_footer') %>
+<%- include('includes/_footer') %>
