--- a/views/pasatiempos.ejs
+++ b/views/pasatiempos.ejs
@@ -1,6 +1,9 @@
-<% include('includes/_header') {title:'Pasatiempos'} %>
+<%- include('includes/_header', {title:'Pasatiempos'}) %>
+<%- include('includes/_nav') %>
+
 <section class="section">
     <h1 class="title is-1">Mi pasatiempos</h1>
     <p class="is-size-5">Como número uno, el pasar del tiempo 🤪</p>
 </section class="section">
-<% include('includes/_footer') %>
+
+<%- include('includes/_footer') %>
