--- a/views/sobreMi.ejs
+++ b/views/sobreMi.ejs
@@ -1,4 +1,5 @@
 <%- include('includes/_header', { title: 'Sobre Mi' }) %>
+<%- include('includes/_nav') %>
 
 <section class="section">
     <h1 class="title is-1">Sobre mi</h1>
@@ -24,4 +25,4 @@
     </div>
 </section>
 
-<% include('includes/_footer.ejs') %>
+<%- include('includes/_footer.ejs') %>
