--- a/views/datosCuriosos.ejs
+++ b/views/datosCuriosos.ejs
@@ -1,13 +1,14 @@
 <%- include('includes/_header', { title: 'Datos Curiosos' }) %>
+<%- include('includes/_nav') %>
 
 <section class="">
     <h1 class="title is-1">Datos curiosos</h1>
     <h2 class="title is-2">¿Cómo funciona un código QR?</h2>
-    <p>
+    <p class="is-size-5">
         Ha decir verdad, sé como funciona (a grandes rasgos) un código QR,
         pero me da flojera escribirlo aquí, así que si quieres saber cómo
         funciona un código QR, pregutamelo en persona y te digo :)
     </p>
 </section>
 
-<% include('includes/_footer.ejs') %>
+<%- include('includes/_footer.ejs') %>
