--- a/views/index.html
+++ b/views/index.html
@@ -44,13 +44,17 @@
     <div class="content">
         <h1 class="title is-1">Preguntas</h1>
         <h2 class="title is-2">
-            ¿De qué va el archivo package.json?
+            ¿Qué otros templating engines existen para node?
         </h2>
         <p class="is-size-5">
-            El archivo package.json basicamente describe todos los paquetes
-            que son necesarios para el correcto funcionamiento de nuestro servidor.
-            Este archivo también se encarga princiaplmente de gestionar y definir las
-            las caracterísitcas de un proyecto desarrollado en Node.js.
+            Aparte de EJS (que significa <em>Embedded JavaScript</em>), también está Handlebars y Pug.
+            Hanlebars es ideal para aplicaciones que buscan una separación clara entre la lógica y 
+            la presentación, favoreciendo plantillas más limpias y mantenibles.
+            Mientraas que Pug es recomendado para desarrolladores que prefieren una sintaxis más 
+            expresiva y concisa, y que buscan reducir la cantidad de código HTML necesario.
+            En nuestro caso, utilizar EJS es bastante adecuado, pues está diseñando precisamente para
+            proyectos que requieren una integración sencilla y rápida, donde la flexibilidad y la 
+            capacidad de incluir lógica en las plantillas son esenciales.
         </p>
     </div>
 </body>
