Lab12: Terminado ahora sí

--- a/views/index.html
+++ b/views/index.html
@@ -48,14 +48,21 @@
         </h2>
         <p class="is-size-5">
             Aparte de EJS (que significa <em>Embedded JavaScript</em>), también está Handlebars y Pug.
+        </p>
+        <p class="is-size-5">
             Hanlebars es ideal para aplicaciones que buscan una separación clara entre la lógica y 
             la presentación, favoreciendo plantillas más limpias y mantenibles.
+        </p>
+        <p class="is-size-5">
             Mientraas que Pug es recomendado para desarrolladores que prefieren una sintaxis más 
             expresiva y concisa, y que buscan reducir la cantidad de código HTML necesario.
+        </p>
+        <p class="is-size-5">
             En nuestro caso, utilizar EJS es bastante adecuado, pues está diseñando precisamente para
             proyectos que requieren una integración sencilla y rápida, donde la flexibilidad y la 
             capacidad de incluir lógica en las plantillas son esenciales.
         </p>
+        
     </div>
 </body>
 </html>
