--- a/views/index.html
+++ b/views/index.html
@@ -19,8 +19,17 @@
         </div>
     </nav>
     <div class="content">
-        <h1 class="tilte is-1">Mauricio Olguín Sánchez</h1>
-        <p class="is-size-4">¡Hola! Esta es mi página personal, aquí podrás descrubir cosas sobre mi :D</p>
+        <div class="columns is-vcentered">
+            <div class="column">
+                <h1 class="title is-1">Mauricio Olguín Sánchez</h1>
+                <p class="is-size-4">¡Hola! Esta es mi página personal, aquí podrás descubrir cosas sobre mí :D</p>
+            </div>
+            <div class="column is-narrow">
+                <figure class="image is-128x128">
+                    <img class="is-rounded" src="/imgs/io_fotografo_low_quality.jpeg" alt="Mauricio con su cámara fotográfica, de perfil">
+                </figure>
+            </div>
+        </div>
     </div>
     <div class="content">
         <h1 class="title is-1">¿Qué es esto?</h1>
@@ -42,27 +51,14 @@
         </p>
     </div>
     <div class="content">
-        <h1 class="title is-1">Preguntas</h1>
+        <h1 class="title is-1">Preguntas Laboratorio 13</h1>
         <h2 class="title is-2">
-            ¿Qué otros templating engines existen para node?
+            ¿Qué beneficios encuentras en el estilo MVC?
         </h2>
         <p class="is-size-5">
-            Aparte de EJS (que significa <em>Embedded JavaScript</em>), también está Handlebars y Pug.
+            Principalmente, orden. Con este estilo, tengo mayor claridad de lo que estoy haciendo y cómo lo estoy haciendo, así,
+            puedo también detectar más rápido cuando tengo un error en dónde y por qué es que tengo ese error.
         </p>
-        <p class="is-size-5">
-            Hanlebars es ideal para aplicaciones que buscan una separación clara entre la lógica y 
-            la presentación, favoreciendo plantillas más limpias y mantenibles.
-        </p>
-        <p class="is-size-5">
-            Mientraas que Pug es recomendado para desarrolladores que prefieren una sintaxis más 
-            expresiva y concisa, y que buscan reducir la cantidad de código HTML necesario.
-        </p>
-        <p class="is-size-5">
-            En nuestro caso, utilizar EJS es bastante adecuado, pues está diseñando precisamente para
-            proyectos que requieren una integración sencilla y rápida, donde la flexibilidad y la 
-            capacidad de incluir lógica en las plantillas son esenciales.
-        </p>
-        
     </div>
 </body>
 </html>
