Lab13: Adding questions

--- a/views/index.html
+++ b/views/index.html
@@ -57,7 +57,17 @@
         </h2>
         <p class="is-size-5">
             Principalmente, orden. Con este estilo, tengo mayor claridad de lo que estoy haciendo y cómo lo estoy haciendo, así,
-            puedo también detectar más rápido cuando tengo un error en dónde y por qué es que tengo ese error.
+            puedo también detectar más rápido cuando tengo un error en dónde y por qué es que tengo ese error. Además, este estilo
+            perimte que su escalabilidad sea más optimia y sencilla.
+        </p>
+        <h2 class="title is-2">
+            ¿Encuentras alguna desventaja en el estilo arquitectónico MVC?
+        </h2>
+        <p class="is-size-5">
+            Una posible desventaja podría ser la curva de aprendizaje, pues a decir verdad, puede resultar un poco confusa al principio.
+            Además, si se trabaja en un proyecto pequeño, puede añadir una complejidad al sistema que probablemente no sea necesaria. Por
+            último, debido a que este estilo separa mucho los datos y la lógica de presentación, podría introducir una sobrecarga adicional 
+            para la comunicación entre los componentes.
         </p>
     </div>
 </body>
