--- a/views/includes/_nav.ejs
+++ b/views/includes/_nav.ejs
@@ -7,6 +7,7 @@
             <a href="/datosCuriosos" id="datosCuriosos" class="navbar-item is-hoverable">Datos curiosos</a>
             <a href="/pasatiempos" id="pasatiempos" class="navbar-item is-hoverable">Pasatiempos</a>
             <a href="/contacto" id="contacto" class="navbar-item is-hoverable">Contacto</a>
+            <a href="/blog" id="blog" class="navbar-item is-hoverable">Blog</a>
         </div>
     </div>
 </nav>
