--- a/views/includes/_nav.ejs
+++ b/views/includes/_nav.ejs
@@ -12,8 +12,8 @@
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                <% if (isLoggedIn) { %>
-                    <%= username %> | 
+                <% if (sessionStatus.isLoggedIn) { %>
+                    <%= sessionStatus.username %> | 
                 <a href="/users/logout" class="button is-danger">
                     Salir
                 </a>
