Lab17: Starting lab

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,21 +35,16 @@
     <div class="content">
         <h1 class="title is-1">Preguntas Laboratorio 13</h1>
         <h2 class="title is-2">
-            ¿Qué beneficios encuentras en el estilo MVC?
+            ¿Qué ventajas tiene escribir el código SQL únicamente en la capa del modelo?
         </h2>
         <p class="is-size-5">
-            Principalmente, orden. Con este estilo, tengo mayor claridad de lo que estoy haciendo y cómo lo estoy haciendo, así,
-            puedo también detectar más rápido cuando tengo un error en dónde y por qué es que tengo ese error. Además, este estilo
-            perimte que su escalabilidad sea más optimia y sencilla.
+            
         </p>
         <h2 class="title is-2">
-            ¿Encuentras alguna desventaja en el estilo arquitectónico MVC?
+            ¿Qué es SQL injection y cómo se puede prevenir?
         </h2>
         <p class="is-size-5">
-            Una posible desventaja podría ser la curva de aprendizaje, pues a decir verdad, puede resultar un poco confusa al principio.
-            Además, si se trabaja en un proyecto pequeño, puede añadir una complejidad al sistema que probablemente no sea necesaria. Por
-            último, debido a que este estilo separa mucho los datos y la lógica de presentación, podría introducir una sobrecarga adicional 
-            para la comunicación entre los componentes.
+            
         </p>
     </div>
 <%- include('includes/_footer.ejs')%>
