Lab19: Begining lab, resolving problems with database

--- a/views/includes/_nav.ejs
+++ b/views/includes/_nav.ejs
@@ -19,7 +19,7 @@
                 </a>
                 <% } else { %>
                 <a href="/users/signup" class="button is-primary">
-                    <strong>Registarse</strong>
+                    <strong>Crear usuario</strong>
                 </a>
                 <a href="/users/login" class="button is-light">
                     Ingresar
